--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
   "uvicorn>=0.23",
   "streamlit>=1.32",
   "httpx>=0.27",
+  "sniffio>=1.3",
   "PyYAML>=6.0",
   "zai-sdk>=0.2.0",
   "langchain-core>=0.2",
